project(
    'mkl_umath',
    ['c', 'cython'],
    version: run_command(
        'python', '-c',
        'import os; exec(open("mkl_umath/_version.py").read()); print(__version__)',
        check: true
    ).stdout().strip(),
    default_options: [
        'c_std=c99',
        'buildtype=release',
        'b_ndebug=if-release'
    ]
)

py = import('python').find_installation(pure: false)

# get includes
# numpy includes
np_dir = run_command(py,
    ['-c', 'import numpy; print(numpy.get_include())'],
    check: true
).stdout().strip()

inc_np = include_directories(np_dir, 'mkl_umath/src')

# Python headers needed for loops
py_dep = py.dependency()

# compiler/linker
cc = meson.get_compiler('c')
c_args = []
link_args = []

if get_option('opt_report')
    if cc.get_id().startswith('intel')
        c_args += 'qopt-report=3'
    else
        warning('Optimization report requested with non-Intel compiler')
    endif
endif

if cc.get_argument_syntax() == 'msvc'
    c_args += [
        '/Ox', '/GS', '/DynamicBase',
        '/fp:precise', 'Qimf-precision=high', '/Qprotect-parens'
    ]
    link_args = ['/NXCompat', '/DynamicBase']
elif cc.get_argument_syntax() == 'gcc'
    c_args += [
        '-O3', '-Wall', '-Wextra', '-Winit-self', '-Wunused-function',
        '-Wuninitialized', '-Wmissing-declarations', '-Wstrict-prototypes',
        '-Wno-unused-parameter', '-fdiagnostics-color=auto',
        '-fstack-protector', '-fstack-protector-all', '-fpic', '-fPIC',
        '-D_FORTIFY_SOURCE=2', '-Wformat', '-Wformat-security',
        '-fno-delete-null-pointer-checks', '-fwrapv',
        '-fprotect-parens', '-fimf-precision=high', '-fno-fast-math',
        '-Wno-incompatible-function-pointer-types'
    ]
    link_args += ['-Wl,-z,noexecstack', '-Wl,-z,relro', '-Wl,-z,now']
else
    error('Unsupported system.')
endif

# vectorization flags
c_args += ['-fveclib=SVML', '-fvectorize']

mkl_dep = dependency('MKL', method: 'cmake',
    modules: ['MKL::MKL'],
    cmake_args: [
        '-DMKL_ARCH=intel64',
        '-DMKL_LINK=dynamic',
        '-DMKL_THREADING=intel_thread',
        '-DMKL_INTERFACE=lp64'
    ],
    required: false
)

# generate loops, similar to numpy
src_file_cli = find_program('_vendored/process_src_template.py')

src_file = generator(
    src_file_cli,
    arguments: ['@INPUT@', '-o', '@OUTPUT@'],
    output: '@BASENAME@'
)

gen_loops_c = src_file.process('mkl_umath/src/mkl_umath_loops.c.src')
gen_loops_h = src_file.process('mkl_umath/src/mkl_umath_loops.h.src')

gen_umath_c = custom_target(
    '__umath_generated',
    output: '__umath_generated.c',
    input: 'mkl_umath/generate_umath.py',
    command: [py, '@INPUT@', '-o', '@OUTPUT@']
)

mkl_umath_loops = shared_library(
    'mkl_umath_loops',
    sources: [gen_loops_c, gen_loops_h],
    include_directories: inc_np,
    dependencies: [mkl_dep, py_dep],
    c_args: c_args,
    link_args: link_args,
    install: true,
    install_dir: py.get_install_dir() / 'mkl_umath'
)

loops_dep = declare_dependency(link_with: mkl_umath_loops)

# extension modules

ext_rpath = ''
if host_machine.system() != 'windows'
    ext_rpath = '$ORIGIN/../..:$ORIGIN/../../..:$ORIGIN'
endif

# gen_loops_h is generated by custom target so must be included in sources
py.extension_module(
    '_ufuncs',
    sources: ['mkl_umath/src/ufuncsmodule.c', gen_umath_c, gen_loops_h],
    include_directories: inc_np,
    dependencies: [mkl_dep, loops_dep],
    c_args: c_args + ['-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION'],
    link_args: link_args,
    install_rpath: ext_rpath,
    install: true,
    subdir: 'mkl_umath'
)

py.extension_module(
    '_patch_numpy',
    sources: ['mkl_umath/src/_patch_numpy.pyx'],
    include_directories: inc_np,
    dependencies: [loops_dep],
    c_args: c_args + ['-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION'],
    cython_args: ['-3', '--fast-fail'],
    link_args: link_args,
    install_rpath: ext_rpath,
    install: true,
    subdir: 'mkl_umath'
)

# install python sources

py.install_sources(
    [
        'mkl_umath/__init__.py',
        'mkl_umath/_init_helper.py',
        'mkl_umath/_version.py',
        'mkl_umath/generate_umath.py'
    ],
    subdir: 'mkl_umath'
)
